ajout du html en sortie de la servelet

--- a/web/index.html
+++ b/web/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit this template
--->
 <html>
     <head>
-        <title>TODO supply a title</title>
+         <title>LinkLearningTemps - Suivi de temps passé par projet.</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
+        <link rel="icon" href="favicon.ico">
+        <link rel="css/style.css" href="stylesheet" type="text/css">
+    </head>  
     <body>
-        <div>Link learning</div>
+        <header>
+            <a href="/"><img src="img/logo.png" alt="logo" id="logo"></a>
+            <h1>LinkLearningTemps</h1>
+        </header>
+        <main>
+            <p>Choisissez un compyte :</p>
+            <ul>
+                <li><a href="suivi?qui=gloglo">G.BESAMBA</a></li>
+                <li><a href="suivi?qui=anonym">A.Nonyme</a></li>
+            </ul>
+        </main>
+        <footer>(c) Copyright 2023</footer>
     </body>
 </html>
